--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"hbs": "~4.0.4",
 		"http-errors": "~1.6.3",
 		"mongoose": "^6.9.1",
-		"morgan": "~1.9.1"
+		"morgan": "~1.9.1",
+		"openai": "^4.11.1"
 	},
 	"devDependencies": {
 		"nodemon": "^3.0.1"
